[gd_scene load_steps=2 format=3 uid="uid://cgvrlmebsl31q"]

[ext_resource type="Script" path="res://Scenes/UI/ResourceDisplay.gd" id="1_l7mov"]

[node name="ResourceDisplay" type="HBoxContainer"]
offset_right = 200.0
offset_bottom = 26.0
script = ExtResource( "1_l7mov" )

[node name="NameLabel" type="Label" parent="."]
offset_right = 82.0
offset_bottom = 26.0
text = "RESOURCE"

[node name="Spacer" type="Label" parent="."]
offset_left = 86.0
offset_right = 91.0
offset_bottom = 26.0
text = ":"

[node name="AmountLabel" type="Label" parent="."]
offset_left = 95.0
offset_right = 200.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "999999999"
horizontal_alignment = 2
